DigicielFull/force-app/main/default/objects/CloudingoAgent__CldIn__c/CloudingoAgent__CldIn__c.object-meta.xml
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <label>CldIn</label>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CldIns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>