DigicielFull/force-app/main/default/objects/CloudingoAgent__CldIn__c/fields/CloudingoAgent__P1__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__P1__c</fullName>
    <label>P1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>