DigicielFull/force-app/main/default/objects/CloudingoAgent__CldIn__c/fields/CloudingoAgent__P3__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__P3__c</fullName>
    <label>P3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>