DigicielFull/force-app/main/default/objects/CloudingoAgent__CldIn__c/fields/CloudingoAgent__P4__c.field-meta.xml
<CustomField>
    <fullName>CloudingoAgent__P4__c</fullName>
    <label>P4</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>